--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     // Room database.
     implementation "android.arch.persistence.room:runtime:2.1.0-alpha02"
     kapt "android.arch.persistence.room:compiler:2.1.0-alpha02"
+    implementation 'com.google.android.material:material:1.0.0'
 
 //    implementation "android.arch.lifecycle:livedata-core:1.1.1"
 }
